--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mooneous.github.io/react_project",
+  "homepage": "https://mooneous.github.io/react_project_part2",
   "name": "test",
   "version": "0.1.0",
   "private": true,
